--- a/src/pages/Product/product.scss
+++ b/src/pages/Product/product.scss
@@ -23,6 +23,7 @@
         flex-direction: column;
         justify-content: space-between;
         gap: 2rem;
+        cursor: pointer;
 
         img {
           background-color: darkgrey;
